# commit-helper

./: .pylintrc  CONTRIBUTING.md  README.asciidoc  README.md  pyproject.toml  src
commit_helper/: __main__.py
commit_helper/conventions/: atom.py  convention_help_handler.py  custom_convention.py  john_convention.py  karma_angular.py  no_convention.py  symphony_cmf.py  tagged.py
commit_helper/utils/: colors.py  file_handler.py  flag_commit_handler.py  protocols.py  text_utils.py  utils.py  utils.pyi
test/: test_conventions.py
