[tool.poetry]
name = "commit-helper"
version = "3.5.0a1"
description = "A python program that helps you write commits following commit conventions"
authors = [
        "andre-filho <andre.filho001@outlook.com>",
        "JohnDevlopment <50782633+JohnDevlopment@users.noreply.github.com>"
]
maintainers = ["JohnDevlopment <50782633+JohnDevlopment@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.asciidoc"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.1"
colored = "^2.2.4"
argparse = "^1.4.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-watch = "^4.2.0"
pylint = "^3.2.3"
icecream = "^2.1.3"
basedpyright = "^1.19.1"

[tool.basedpyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
reportMissingTypeStubs = "information"
reportAny = false
reportImplicitRelativeImport = true

[tool.poetry.scripts]
commit = "commit_helper.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
